--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
+        classpath("com.google.maps:google-maps-services:0.1.20")
     }
 }
 
@@ -32,6 +33,9 @@ dependencies {
 
     // Use MySQL Connector-J
     compile 'mysql:mysql-connector-java'
+
+    // Use Maps api
+    compile 'com.google.maps:google-maps-services:0.1.20'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
