--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,12 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     // Use MySQL Connector-J
-    compile 'mysql:mysql-connector-java'
+//    compile 'mysql:mysql-connector-java'
 
     // Use Maps api
     compile 'com.google.maps:google-maps-services:0.1.20'
+
+    runtime 'com.h2database:h2'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
