--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3310/db_example
+#spring.datasource.username=testuser
+#spring.datasource.password=testpassword
+
+#db.driver=org.h2.Driver
+#db.url=jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
+#db.username=sa
+#db.password=
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3310/db_example
+spring.datasource.url=jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=testuser
 spring.datasource.password=testpassword
