--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@
 #db.password=
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:springbatch
 spring.datasource.username=testuser
 spring.datasource.password=testpassword
