--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@
 #spring.datasource.username=testuser
 #spring.datasource.password=testpassword
 
-#db.driver=org.h2.Driver
-#db.url=jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
-#db.username=sa
-#db.password=
+db.driver=org.h2.Driver
+db.url=jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
+db.username=sa
+db.password=
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:springbatch
-spring.datasource.username=testuser
-spring.datasource.password=testpassword
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:h2:mem:springbatch
+#spring.datasource.username=testuser
+#spring.datasource.password=testpassword
