--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ db.driver=org.h2.Driver
 db.url=jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
 db.username=sa
 db.password=
+gmaps.secret=AIzaSyDlLeVXnx4Hg1vsIvb_8MT8HmNRyVQck-8
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:h2:mem:springbatch
