--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 #spring.datasource.username=testuser
 #spring.datasource.password=testpassword
 
+spring.jpa.hibernate.ddl-auto = create-drop
 db.driver=org.h2.Driver
 db.url=jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
 db.username=sa
