used post method to add shops

--- a/src/main/resources/testApplication.properties
+++ b/src/main/resources/testApplication.properties
@@ -3,9 +3,9 @@
 #spring.datasource.username=testuser
 #spring.datasource.password=testpassword
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:devLocation;DB_CLOSE_ON_EXIT=FALSE
+db.url=jdbc:h2:mem:testLocation;DB_CLOSE_ON_EXIT=FALSE
 db.username=sa
 db.password=
 gmaps.secret=AIzaSyDlLeVXnx4Hg1vsIvb_8MT8HmNRyVQck-8
